test/expected/simple-next-tick.txt
/scripts/simple-next-tick.js:8
  throw new Error('trace');
  ^

Error: trace
    at callback (/scripts/simple-next-tick.js:8:9)
    at Object.<anonymous> (/scripts/simple-next-tick.js:7:9)
